[gd_scene load_steps=7 format=4 uid="uid://dn3mph6ksh77n"]

[ext_resource type="TileSet" uid="uid://b5ur4cqn85i6h" path="res://Assets/tile_sets/tunnels.tres" id="1_80q0o"]
[ext_resource type="Script" path="res://levels/level.gd" id="1_xc4jd"]
[ext_resource type="PackedScene" uid="uid://b4oagoyytxykj" path="res://characters/enemy_crying_student.tscn" id="2_nu8wh"]
[ext_resource type="Script" path="res://camera_2d.gd" id="4_m6hq4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i8clr"]
size = Vector2(2.8, 73)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f43hn"]
size = Vector2(20, 64.4)

[node name="Level" type="Node2D"]
y_sort_enabled = true
scale = Vector2(5, 5)
script = ExtResource("1_xc4jd")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAFAAMAAAABAAAAAAAFAAMAAAACAAAAAAAFAAMAAAADAAAAAAAFAAMAAAAEAAAAAAAFAAMAAAAFAAAAAAAFAAMAAAAGAAAAAAAFAAMAAAAHAAAAAAAFAAMAAAAIAAAAAAAFAAMAAAAJAAAAAAAFAAMAAAAKAAAAAAAFAAMAAAALAAAAAAAFAAMAAAAMAAAAAAAFAAMAAAANAAAAAAAFAAMAAAAOAAAAAAAFAAMAAAAPAAAAAAAFAAMAAAAQAAAAAAAFAAMAAAARAAAAAAAFAAMAAAASAAAAAAAFAAMAAAATAAAAAAAFAAMAAAAUAAAAAAAGAAIAAAAVAAAAAAAFAAMAAAAWAAAAAAAFAAMAAAAAAAEAAAAAAAQAAAAAAAIAAAABAAMAAAAAAAMAAAAAAAQAAAABAAMAAAABAAMAAAABAAIAAAAAAAQAAAABAAEAAAAAAAQAAAACAAEAAAAAAAQAAAADAAIAAAAAAAQAAAACAAIAAAAAAAQAAAACAAMAAAAAAAAAAAAEAAMAAAAAAAQAAAADAAMAAAAAAAQAAAAEAAIAAAAEAAAAAAAEAAEAAAAAAAQAAAAFAAEAAAAAAAQAAAAGAAEAAAAAAAQAAAAFAAIAAAABAAMAAAAGAAIAAAABAAMAAAAGAAMAAAABAAYAAAAFAAMAAAAAAAQAAAAIAAIAAAABAAMAAAAJAAIAAAAAAAQAAAAHAAEAAAAAAAQAAAAKAAIAAAABAAMAAAAKAAMAAAAAAAQAAAAJAAMAAAAAAAQAAAAIAAMAAAAAAAQAAAALAAIAAAAAAAQAAAALAAEAAAAEAAAAAAAKAAEAAAAAAAQAAAAJAAEAAAAAAAQAAAANAAEAAAAAAAQAAAAOAAEAAAAAAAQAAAALAAMAAAABAAMAAAAPAAMAAAAAAAQAAAAQAAMAAAAAAAQAAAAPAAIAAAABAAMAAAAPAAEAAAAAAAQAAAAQAAEAAAAAAAQAAAARAAEAAAABAAMAAAASAAEAAAAAAAQAAAATAAEAAAAAAAQAAAAUAAEAAAAAAAQAAAAWAAEAAAAAAAQAAAAWAAIAAAAAAAQAAAAWAAMAAAABAAMAAAAVAAMAAAAAAAQAAAAUAAMAAAAAAAQAAAATAAMAAAAAAAQAAAASAAMAAAABAAMAAAARAAMAAAABAAMAAAARAAIAAAAAAAQAAAASAAIAAAAAAAQAAAATAAIAAAABAAMAAAAUAAIAAAAAAAQAAAAVAAIAAAAGAAAAAAAAAP//AQADAAUAAAABAP//AQACAAQAAAACAP//AQADAAUAAAADAP//AQADAAUAAAAJAP//AQADAAUAAAAKAP//AQADAAUAAAALAP//AQACAAQAAAAMAP//AQADAAUAAAANAP//AQADAAUAAAAOAP//AQACAAYAAAAPAP//AQACAAQAAAAQAP//AQADAAUAAAARAP//AQADAAUAAAATAP//AQACAAQAAAAUAP//AQADAAUAAAAWAP//AQADAAUAAAAAAP7/AQABAAUAAAABAP7/AQABAAUAAAACAP7/AQABAAUAAAADAP7/AQABAAUAAAAEAP7/AQACAAAAAAAJAP7/AQABAAUAAAAKAP7/AQABAAUAAAALAP7/AQABAAUAAAAMAP7/AQABAAUAAAANAP7/AQABAAUAAAAOAP7/AQABAAUAAAAPAP7/AQABAAUAAAAQAP7/AQABAAUAAAARAP7/AQABAAUAAAATAP7/AQABAAUAAAAUAP7/AQABAAUAAAAWAP7/AQABAAUAAAAUAP3/AQABAAUAAAATAP3/AQABAAUAAAARAP3/AQABAAUAAAAQAP3/AQABAAUAAAAPAP3/AQABAAUAAAAOAP3/AQABAAUAAAANAP3/AQABAAUAAAAMAP3/AQABAAUAAAALAP3/AQABAAUAAAAKAP3/AQABAAUAAAAJAP3/AQABAAUAAAAEAP3/AQABAAUAAAADAP3/AQABAAUAAAACAP3/AQABAAUAAAABAP3/AQABAAUAAAAAAP3/AQABAAUAAAAAAPz/AQABAAUAAAABAPz/AQAAAAMAAAADAPz/AQABAAUAAAAEAPz/AQABAAUAAAAIAPz/AQABAAUAAAAJAPz/AQABAAUAAAAKAPz/AQABAAUAAAALAPz/AQAAAAMAAAANAPz/AQABAAUAAAAOAPz/AQABAAUAAAAPAPz/AQABAAUAAAAQAPz/AQABAAUAAAARAPz/AQABAAUAAAATAPz/AQABAAUAAAAUAPz/AQABAAUAAAAWAP3/AQABAAUAAAAVAPz/AQAAAAMAAAAVAP3/AQABAAUAAAAVAP7/AQABAAUAAAAVAP//AQADAAUAAAAOAAIAAAACAAAAAAAOAAMAAAAEAAAAAAAXAP//AQADAAUAAAAYAP//AQADAAUAAAAZAP//AQADAAUAAAAaAP//AQADAAUAAAAbAP//AQADAAUAAAAcAP//AQADAAcAAAAgAP//AQADAAUAAAAhAP//AQADAAUAAAAiAP//AQADAAUAAAAjAP//AQADAAUAAAAkAP//AQADAAUAAAAmAP//AQADAAUAAAAnAP//AQADAAUAAAAoAP//AQACAAYAAAApAP//AQADAAUAAAAqAP//AQADAAUAAAAXAP7/AQABAAUAAAAXAP3/AQABAAUAAAAXAPz/AQABAAUAAAAYAPz/AQABAAUAAAAZAPz/AQABAAUAAAAZAP3/AQABAAUAAAAYAP3/AQABAAUAAAAYAP7/AQABAAUAAAAaAP3/AQABAAUAAAAbAP3/AQABAAUAAAAcAP3/AQABAAUAAAAcAP7/AQABAAUAAAAbAP7/AQABAAUAAAAaAP7/AQABAAUAAAAaAPz/AQABAAUAAAAbAPz/AQABAAUAAAAZAP7/AQABAAUAAAAcAPz/AQABAAUAAAAdAPz/AQABAAUAAAAeAPz/AQABAAUAAAAfAPz/AQAAAAMAAAAgAPz/AQABAAUAAAAhAPz/AQABAAUAAAAiAPz/AQABAAUAAAAjAPz/AQABAAUAAAAkAPz/AQABAAUAAAAmAPz/AQABAAUAAAAnAPz/AQABAAUAAAApAPz/AQAAAAMAAAApAP3/AQABAAUAAAAqAP3/AQABAAUAAAAqAP7/AQABAAUAAAApAP7/AQABAAUAAAAnAP7/AQABAAUAAAAmAP7/AQABAAUAAAAkAP7/AQABAAUAAAAjAP7/AQABAAUAAAAiAP7/AQABAAUAAAAhAP7/AQABAAUAAAAgAP7/AQABAAUAAAAgAP3/AQABAAUAAAAhAP3/AQABAAUAAAAiAP3/AQABAAUAAAAjAP3/AQABAAUAAAAkAP3/AQABAAUAAAAmAP3/AQABAAUAAAAnAP3/AQABAAUAAAArAP7/AQABAAUAAAArAP3/AQABAAUAAAArAPz/AQABAAUAAAAsAPz/AQABAAUAAAAsAP3/AQABAAUAAAAsAP7/AQABAAUAAAAwAP7/AQABAAUAAAAxAP7/AQABAAUAAAAyAP7/AQABAAUAAAAzAP7/AQABAAUAAAA0AP7/AQABAAUAAAA1AP7/AQABAAUAAAA2AP7/AQABAAUAAAA2AP3/AQABAAUAAAA3AP3/AQABAAUAAAA4AP3/AQABAAUAAAA4AP7/AQABAAUAAAA3AP7/AQABAAUAAAA1AP3/AQABAAUAAAA0AP3/AQABAAUAAAAzAP3/AQABAAUAAAAyAP3/AQABAAUAAAAxAP3/AQABAAUAAAAwAP3/AQABAAUAAAAwAPz/AQABAAUAAAAxAPz/AQABAAUAAAAyAPz/AQABAAUAAAAzAPz/AQAAAAMAAAA1APz/AQABAAUAAAA2APz/AQABAAUAAAA3APz/AQABAAUAAAA4APz/AQABAAUAAAA5APz/AQABAAUAAAA5AP3/AQABAAUAAAA5AP7/AQABAAUAAAA6APz/AQABAAUAAAA7APz/AQABAAUAAAA8APz/AQABAAUAAAA9APz/AQAAAAMAAAA+AP7/AQABAAUAAAA/AP7/AQABAAUAAABAAP7/AQABAAUAAABBAP7/AQABAAUAAABDAP7/AQABAAUAAABDAP3/AQABAAUAAABDAPz/AQABAAUAAABBAPz/AQABAAUAAABAAPz/AQABAAUAAAA/APz/AQABAAUAAAA/AP3/AQABAAUAAABAAP3/AQABAAUAAABBAP3/AQABAAUAAAA+AP3/AQABAAUAAAAXAAAAAAAFAAMAAAAYAAAAAAAFAAMAAAAZAAAAAAAFAAMAAAAaAAAAAAAFAAMAAAAbAAAAAAAFAAMAAAAcAAAAAAAFAAMAAAAdAAAAAAAGAAIAAAAeAAAAAAAFAAMAAAAfAAAAAAAFAAMAAAAgAAAAAAAGAAIAAAAhAAAAAAAGAAIAAAAiAAAAAAAFAAMAAAAjAAAAAAAFAAMAAAAkAAAAAAAFAAMAAAAlAAAAAAAFAAMAAAAmAAAAAAAGAAIAAAAnAAAAAAAFAAMAAAAoAAAAAAAFAAMAAAApAAAAAAAFAAMAAAAqAAAAAAAFAAMAAAArAAAAAAAGAAIAAAAsAAAAAAAFAAMAAAAtAAAAAAAFAAMAAAAuAAAAAAAFAAMAAAAvAAAAAAAFAAMAAAAwAAAAAAAFAAMAAAAxAAAAAAAFAAMAAAAyAAAAAAAGAAIAAAAzAAAAAAAFAAMAAAA0AAAAAAAGAAIAAAA1AAAAAAAGAAIAAAA2AAAAAAAGAAIAAAA3AAAAAAAFAAMAAAA4AAAAAAAFAAMAAAA5AAAAAAAFAAMAAAA6AAAAAAAGAAIAAAA7AAAAAAAFAAMAAAA8AAAAAAAGAAIAAAA9AAAAAAAGAAIAAAA+AAAAAAAGAAIAAAA/AAAAAAAFAAMAAABAAAAAAAAFAAMAAABBAAAAAAAGAAIAAABCAAAAAAAFAAMAAABDAAAAAAAGAAIAAAAXAAEAAAAAAAAAAAAXAAIAAAABAAMAAAAXAAMAAAAAAAQAAAAYAAMAAAAAAAQAAAAZAAMAAAAAAAQAAAAaAAIAAAAAAAQAAAAaAAEAAAAAAAQAAAAZAAEAAAAAAAQAAAAYAAEAAAABAAMAAAAYAAIAAAABAAMAAAAaAAMAAAAAAAQAAAAbAAMAAAAAAAQAAAAcAAMAAAAAAAQAAAAcAAEAAAAEAAAAAAAbAAEAAAAAAAQAAAAbAAIAAAAAAAQAAAAdAAEAAAAAAAQAAAAeAAEAAAAAAAQAAAAfAAEAAAABAAMAAAAfAAIAAAAAAAQAAAAeAAIAAAAAAAQAAAAeAAMAAAABAAMAAAAdAAMAAAAAAAQAAAAdAAIAAAAAAAQAAAAfAAMAAAAAAAQAAAAgAAMAAAABAAMAAAAhAAMAAAAAAAQAAAAiAAMAAAAAAAQAAAAjAAMAAAAAAAQAAAAkAAMAAAAAAAQAAAAlAAMAAAAAAAQAAAAnAAMAAAAAAAQAAAAoAAMAAAAAAAQAAAApAAMAAAAEAAAAAAAqAAMAAAABAAMAAAArAAMAAAAAAAQAAAAtAAMAAAAAAAQAAAAuAAMAAAAAAAQAAAAuAAIAAAABAAMAAAAtAAIAAAAAAAQAAAAtAAEAAAAAAAQAAAArAAEAAAAAAAQAAAApAAEAAAABAAMAAAAoAAEAAAAAAAQAAAAnAAEAAAAAAAQAAAAmAAEAAAAAAAQAAAAlAAEAAAAAAAQAAAAkAAEAAAAAAAQAAAAhAAEAAAAAAAQAAAAgAAEAAAAAAAQAAAAgAAIAAAAAAAQAAAAhAAIAAAAAAAQAAAAkAAIAAAAAAAQAAAAlAAIAAAABAAMAAAAoAAIAAAABAAMAAAApAAIAAAAAAAQAAAAqAAIAAAAAAAQAAAArAAIAAAABAAYAAAAvAAIAAAAAAAQAAAAuAAEAAAAAAAQAAAAvAAEAAAAAAAQAAAAvAAMAAAABAAMAAAAwAAMAAAAAAAQAAAAxAAMAAAAAAAQAAAAyAAMAAAAAAAQAAAAzAAMAAAABAAMAAAA0AAMAAAAAAAQAAAA1AAMAAAAAAAQAAAA2AAMAAAAAAAQAAAA5AAMAAAAGAAAAAAA6AAMAAAAAAAQAAAA7AAMAAAAAAAQAAAA9AAMAAAAAAAQAAAA+AAMAAAAAAAQAAAA/AAMAAAAAAAQAAABAAAMAAAAAAAQAAABBAAMAAAAAAAQAAABCAAMAAAACAAAAAABDAAMAAAAAAAQAAABDAAIAAAAAAAQAAABDAAEAAAAAAAQAAABCAAEAAAABAAMAAABBAAEAAAAAAAQAAABAAAEAAAAEAAAAAAA/AAEAAAAAAAQAAAA+AAEAAAAAAAQAAAA9AAEAAAAAAAQAAAA8AAEAAAABAAEAAAA7AAEAAAAAAAQAAAA5AAEAAAAAAAQAAAA4AAEAAAAAAAQAAAA3AAEAAAAAAAQAAAA2AAEAAAAAAAQAAAA1AAEAAAAAAAQAAAA0AAEAAAAAAAQAAAAzAAEAAAAAAAQAAAAyAAEAAAABAAMAAAAxAAEAAAACAAAAAAAwAAEAAAAAAAQAAAAwAAIAAAAAAAQAAAAxAAIAAAAAAAQAAAAyAAIAAAAAAAQAAAAzAAIAAAAAAAQAAAA0AAIAAAAEAAAAAAA1AAIAAAAAAAQAAAA2AAIAAAAAAAQAAAA3AAIAAAAAAAQAAAA5AAIAAAAAAAQAAAA6AAIAAAAAAAQAAAA7AAIAAAAAAAQAAAA8AAIAAAABAAMAAAA9AAIAAAAEAAAAAAA+AAIAAAAAAAQAAAA/AAIAAAABAAMAAABBAAIAAAAAAAQAAABCAAIAAAAAAAQAAAArAP//AQADAAUAAAAsAP//AQADAAUAAAAtAP//AQADAAUAAAAuAP//AQADAAUAAAAvAP//AQADAAUAAAAwAP//AQADAAUAAAAxAP//AQADAAUAAAAyAP//AQADAAUAAAAzAP//AQADAAUAAAA0AP//AQADAAUAAAA1AP//AQADAAUAAAA3AP//AQADAAUAAAA4AP//AQADAAUAAAA5AP//AQADAAUAAAA2AP//AQADAAUAAAA6AP//AQADAAcAAAA+AP//AQADAAUAAAA/AP//AQADAAUAAABAAP//AQADAAUAAABBAP//AQADAAUAAABCAP//AQACAAYAAABDAP//AQADAAUAAAD/////AQADAAUAAAD///7/AQABAAUAAAD///3/AQABAAUAAAD///z/AQABAAUAAAD//wAAAQAHAAYAAAD//wEAAQAHAAYAAAD//wIAAQAHAAYAAAD//wMAAQAHAAYAAAD//wQAAQAHAAYAAAAAAAQAAQAHAAYAAAABAAQAAQAHAAYAAAACAAQAAQAHAAYAAAADAAQAAQAHAAYAAAAEAAQAAQAHAAYAAAAFAAQAAQAHAAYAAAAGAAQAAQAHAAYAAAAHAAQAAQAHAAYAAAAIAAQAAQAHAAYAAAAJAAQAAQAHAAYAAAAKAAQAAQAHAAYAAAALAAQAAQAHAAYAAAAMAAQAAQAHAAYAAAANAAQAAQAHAAYAAAAOAAQAAQAHAAYAAAAPAAQAAQAHAAYAAAAQAAQAAQAHAAYAAAARAAQAAQAHAAYAAAASAAQAAQAHAAYAAAATAAQAAQAHAAYAAAAUAAQAAQAHAAYAAAAVAAQAAQAHAAYAAAAWAAQAAQAHAAYAAAAXAAQAAQAHAAYAAAAYAAQAAQAHAAYAAAAZAAQAAQAHAAYAAAAaAAQAAQAHAAYAAAAbAAQAAQAHAAYAAAAcAAQAAQAHAAYAAAAdAAQAAQAHAAYAAAAeAAQAAQAHAAYAAAAfAAQAAQAHAAYAAAAgAAQAAQAHAAYAAAAhAAQAAQAHAAYAAAAiAAQAAQAHAAYAAAAjAAQAAQAHAAYAAAAkAAQAAQAHAAYAAAAlAAQAAQAHAAYAAAAmAAQAAQAHAAYAAAAnAAQAAQAHAAYAAAAoAAQAAQAHAAYAAAApAAQAAQAHAAYAAAAqAAQAAQAHAAYAAAArAAQAAQAHAAYAAAAsAAQAAQAHAAYAAAAtAAQAAQAHAAYAAAAuAAQAAQAHAAYAAABEAAAAAQAHAAYAAABEAAEAAQAHAAYAAABEAAIAAQAHAAYAAABEAAMAAQAHAAYAAABEAAQAAQAHAAYAAAAvAAQAAQAHAAYAAAAwAAQAAQAHAAYAAAAxAAQAAQAHAAYAAAAyAAQAAQAHAAYAAAAzAAQAAQAHAAYAAAA0AAQAAQAHAAYAAAA1AAQAAQAHAAYAAAA2AAQAAQAHAAYAAAA3AAQAAQAHAAYAAAA4AAQAAQAHAAYAAAA5AAQAAQAHAAYAAAA6AAQAAQAHAAYAAAA7AAQAAQAHAAYAAAA8AAQAAQAHAAYAAAA9AAQAAQAHAAYAAAA+AAQAAQAHAAYAAAA/AAQAAQAHAAYAAABAAAQAAQAHAAYAAABBAAQAAQAHAAYAAABCAAQAAQAHAAYAAABDAAQAAQAHAAYAAABEAP//AQADAAUAAABEAP7/AQAAAAYAAABEAP3/AQAAAAYAAABEAPz/AQAAAAYAAAAEAP//AQADAAUAAAAGAP//AQADAAUAAAAHAP//AQADAAUAAAAFAP//AQACAAQAAAAIAP//AQACAAQAAAAIAP3/AQABAAUAAAAIAP7/AQABAAUAAAASAP//AQADAAUAAAASAP7/AQABAAUAAAASAPz/AQABAAUAAAASAP3/AQAAAAYAAAAlAPz/AQABAAUAAAAlAP7/AQABAAUAAAAlAP//AQACAAQAAAAlAP3/AQAAAAYAAAAvAP3/AQABAAUAAAAuAP7/AQABAAUAAAAuAP3/AQABAAUAAAAtAPz/AQABAAUAAAAtAP7/AQAAAAYAAAAvAP7/AQAAAAYAAAAvAPz/AQAAAAYAAAAuAPz/AQAAAAYAAAAtAP3/AQAAAAYAAAADAAEAAAABAAMAAAAMAAEAAAAAAAQAAAAQAAIAAAAAAAQAAAAVAAEAAAAAAAQAAAAZAAIAAAACAAAAAAAcAAIAAAAAAAQAAAAmAAMAAAABAAMAAAAqAAEAAAABAAMAAAA8AAMAAAABAAMAAABAAAIAAAAAAAQAAAA4AAMAAAAAAAQAAAA3AAMAAAABAAMAAAA4AAIAAAABAAMAAAA6AAEAAAABAAMAAAAmAAIAAAABAAMAAAAnAAIAAAAAAAQAAAAjAAIAAAAAAAQAAAAiAAEAAAAAAAQAAAAiAAIAAAABAAMAAAAjAAEAAAABAAMAAAAIAAEAAAABAAMAAAAMAAMAAAABAAMAAAANAAMAAAABAAMAAAAMAAIAAAABAAMAAAANAAIAAAAAAAQAAAAsAAMAAAABAAMAAAA=")
tile_set = ExtResource("1_80q0o")

[node name="EscapeZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EscapeZone"]
position = Vector2(0.400001, 26.5)
shape = SubResource("RectangleShape2D_i8clr")

[node name="EnemyCryingStudent" parent="." instance=ExtResource("2_nu8wh")]
position = Vector2(304.4, 23.4)

[node name="EnemyCryingStudent2" parent="." instance=ExtResource("2_nu8wh")]
position = Vector2(548.8, 51.4)

[node name="EnemyCryingStudent3" parent="." instance=ExtResource("2_nu8wh")]
position = Vector2(304.6, 48)

[node name="PlayerPosition" type="Node2D" parent="."]
position = Vector2(42.5204, 32.681)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(42.52, 0)
script = ExtResource("4_m6hq4")

[node name="NextLevelZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NextLevelZone"]
position = Vector2(1095.6, 32.4)
shape = SubResource("RectangleShape2D_f43hn")

[node name="EnemyCryingStudent4" parent="." instance=ExtResource("2_nu8wh")]
position = Vector2(736.8, 26.8)

[node name="EnemyCryingStudent5" parent="." instance=ExtResource("2_nu8wh")]
position = Vector2(737, 45.2)

[node name="EnemyCryingStudent6" parent="." instance=ExtResource("2_nu8wh")]
position = Vector2(891.4, 32)

[node name="EnemyCryingStudent7" parent="." instance=ExtResource("2_nu8wh")]
position = Vector2(433.8, 24.2)

[node name="EnemyCryingStudent8" parent="." instance=ExtResource("2_nu8wh")]
position = Vector2(629.6, 22.2)
